--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     </div>
     <div id="main" style="display: none;">
         <h1 style="color:rgb(250, 165, 46)"> Welcom To Password Manager</h1>
-        <h2>Hi Mr/Ms</h2><span id="myName"></span>
+        <h2>Hi Mr/Ms Ritam</h2><span id="myName"></span>
         <div class="inputbox">
             <input type="text" placeholder="Enter the App name" id="appname">
             <input type="text" placeholder="Enter the username" id="appusername">
