--- a/index.html
+++ b/index.html
@@ -63,14 +63,16 @@
     </div>
     <div id="main" style="display: none;">
         <h1 style="color:rgb(250, 165, 46)"> Welcom To Password Manager</h1>
-        <h2>Hi Mr/Ms Ritam</h2><span id="myName"></span>
+        <h2>Hi Mr/Ms </h2><span id="myName"></span>
         <div class="inputbox">
             <input type="text" placeholder="Enter the App name" id="appname">
             <input type="text" placeholder="Enter the username" id="appusername">
             <input type="text" placeholder="Enter the password" id="apppassword">
 
-            <button id="finalsubbmit">Submit</button>
-            <button id="finalremove">Remove</button>
+            <div  id="btn"></div>
+            <div class="databox" id="databox" style="display: flex;">
+                
+            </div>
         </div>
     </div>
     <script src="script.js"></script>
