--- a/index.html
+++ b/index.html
@@ -63,15 +63,15 @@
     </div>
     <div id="main" style="display: none;">
         <h1 style="color:rgb(250, 165, 46)"> Welcom To Password Manager</h1>
-        <h2>Hi Mr/Ms </h2><span id="myName"></span>
+        <h2>Hi Mr/Ms </h2> <h2><span id="myName"> </span></h2>
         <div class="inputbox">
-            <input type="text" placeholder="Enter the App name" id="appname">
-            <input type="text" placeholder="Enter the username" id="appusername">
-            <input type="text" placeholder="Enter the password" id="apppassword">
+            <input type="text"class="input ele"   placeholder="Enter the App name" id="appname">
+            <input type="text"class="input ele"  placeholder="Enter the username" id="appusername">
+            <input type="text" class="input ele"  placeholder="Enter the password" id="apppassword">
 
             <div  id="btn"></div>
             <div class="databox" id="databox" style="display: flex;">
-                
+                 
             </div>
         </div>
     </div>
